--- a/src/Papaya.vcxproj.filters
+++ b/src/Papaya.vcxproj.filters
@@ -14,4 +14,20 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="win32_papaya.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="win32_papaya.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="papaya.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="papaya.cpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
