Changed a few compilation options
Turned off minimal rebuild and changed runtime library from DLL to multithreaded

--- a/src/Papaya.vcxproj
+++ b/src/Papaya.vcxproj
@@ -45,6 +45,8 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>PAPAYA_INTERNAL;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <MinimalRebuild>false</MinimalRebuild>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
