Temporarily switched to VS 2012, Added basic stb_image integration

--- a/src/Papaya.vcxproj.filters
+++ b/src/Papaya.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="papaya.cpp">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
