Implemented clearing and buffer swap on window resize, #included imgui.cpp for single file compilation

--- a/src/Papaya.vcxproj
+++ b/src/Papaya.vcxproj
@@ -73,7 +73,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
       </ExcludedFromBuild>
     </ClInclude>
-    <ClCompile Include="imgui.cpp" />
+    <ClInclude Include="imgui.cpp" />
     <ClCompile Include="win32_papaya.cpp" />
   </ItemGroup>
   <ItemGroup>
