Added glew using source

--- a/src/Papaya.vcxproj
+++ b/src/Papaya.vcxproj
@@ -47,6 +47,7 @@
       <PreprocessorDefinitions>PAPAYA_INTERNAL;_MBCS;_CRT_SECURE_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>false</MinimalRebuild>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <AdditionalIncludeDirectories>$(SolutionDir)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -60,6 +61,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>$(SolutionDir)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -69,12 +71,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="GL\glew.h" />
+    <ClInclude Include="GL\wglew.h" />
     <ClInclude Include="imgui.h" />
     <ClInclude Include="papaya.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
       </ExcludedFromBuild>
     </ClInclude>
     <ClInclude Include="imgui.cpp" />
+    <ClInclude Include="glew.c" />
     <ClCompile Include="win32_papaya.cpp" />
   </ItemGroup>
   <ItemGroup>
