--- a/src/Papaya.vcxproj.filters
+++ b/src/Papaya.vcxproj.filters
@@ -44,5 +44,14 @@
     <ClInclude Include="imgui.cpp">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="GL\glew.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GL\wglew.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="glew.c">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
